Merge updates from classlib trunk@583411 since r578483
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/branches/java6@583703 13f79535-47bb-0310-9956-ffa450edef68